[gd_scene load_steps=2 format=3 uid="uid://victoryscene123"]

[ext_resource type="Script" path="res://scripts/ui/VictoryScene.gd" id="1_script"]

[node name="VictoryScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="FireworksContainer" type="Node2D" parent="."]

[node name="CreditsLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "VICTORY"
fit_content = false
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false
